--- a/public/main.css
+++ b/public/main.css
@@ -44,15 +44,11 @@
 
 /** Rest of the DOM. **/
 #body {
-	height: 90vh;
-	width: 90vw;
+	height:	100vh;
+	width: 100vw;
 	background-color: rgba(255, 255, 255, 1);
 	display: flex;
 	flex-direction: column;
-	margin-top: 5vh;
-	margin-bottom: 5vh;
-	margin-right: 5vw;
-	margin-left: 5vw;
 }
 
 #header {
@@ -149,4 +145,10 @@
 	bottom: 0;
 	left: 0;
 	width: 100vw;
+}
+
+#root {
+	display: flex;
+	height: 100%;
+	width: 100%;
 }
