added header and footer

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -26,6 +26,10 @@ h2 {
   font-weight: 400;
 }
 
+#reviewMain{
+  width: 100%;
+}
+
 .card-side-container {
     display: flex;
     flex-direction: column;
