--- a/public/css/style.css
+++ b/public/css/style.css
@@ -26,6 +26,15 @@ h2 {
   font-weight: 400;
 }
 
+#form{
+  max-width: 720px;
+  position: relative;
+  margin: 32px auto;
+  width: auto;
+  padding: 0;
+  height: 15vh;
+}
+
 .card-side-container {
     display: flex;
     flex-direction: column;
@@ -38,11 +47,12 @@ h2 {
 
 /*- Card container -*/
 .card-container {
+  padding-top: 5vh;
   position: relative;
   z-index: 1;
   margin: 32px auto;
   max-width: 720px;
-  height: 420px;
+  height: 40vh;
   -webkit-perspective: 1000px;
           perspective: 1000px;
 }
@@ -57,12 +67,25 @@ h2 {
 }
 
 /*- Flipping the card -*/
+/*
 .card-container:hover .card-body {
   -webkit-transform: rotateY(180deg);
           transform: rotateY(180deg);
 }
 
 .card-container:hover > .card-body > .side-front {
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity 1s ease-in, visibility .75s linear;
+}
+*/
+
+.card-container.is-flipped .card-body {
+  -webkit-transform: rotateY(180deg);
+  transform: rotateY(180deg);
+}
+
+.card-container.is-flipped .card-body > .side-front {
   opacity: 0;
   visibility: hidden;
   transition: opacity 1s ease-in, visibility .75s linear;
@@ -86,7 +109,6 @@ h2 {
 /*- Back side -*/
 .side-back {
   z-index: 2;
-  padding: 32px;
   text-align: center;
   -webkit-transform: rotateY(180deg);
           transform: rotateY(180deg);
