--- a/public/css/style.css
+++ b/public/css/style.css
@@ -33,6 +33,12 @@ h2 {
   width: auto;
   padding: 0;
   height: 15vh;
+  margin-top: 12.5vh;
+}
+
+#flipButton
+{
+  margin-bottom: 2.5vh;
 }
 
 .card-side-container {
